--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -49,21 +49,21 @@ h1 {
 h2 {
   font-size: 24px;
   font-family: 'URWGeometric-Medium';
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 5px;
 }
 
 h3 {
   font-size: 20px;
   font-family: 'URWGeometric-Medium';
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 h4 {
   font-size: 18px;
   font-family: 'URWGeometric-Medium';
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
@@ -252,7 +252,7 @@ div.topic {
   border-bottom: solid 1px #cccccc;
   width: 99%;
   padding-bottom:10px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 /* .banner h1 {
   border-bottom: solid 1px #cccccc;
@@ -1608,6 +1608,7 @@ p a {
     font-family: "OpenSans-Regular";
     height: 40px;
     width: 39px !important;
+    color:#1e1e1e;
   }
   #change-filter {
     position: absolute;
